NitrOS-9 V3.2.9:

----------------------------------------------------------
2013/01/15 David Ladd
M ChangeLog
M 3rdparty/utils/aaw/mkdskindex

Updated mkdskindex to state that the becker disks are a
DriveWire 3/4 server disk image rather than a normal
disk image for the index.html creation.

----------------------------------------------------------
2013/01/15 David Ladd
M ChangeLog
M 3rdparty/packages/subsim/makefile

Found a problem in the makefile for subsim. When using a
"make dskcopy", make would try to copy the disk images even
if they did not exist.  Found that the depend "dsk" was not
in the dskcopy section like all the other makefile(s).
Corrected and tested and the disk images are now being
created when you do a "make dskcopy".

----------------------------------------------------------
2013/01/14 David Ladd
M ChangeLog
M 3rdparty/booters/makefile
M 3rdparty/customboots/boisy/makefile
M 3rdparty/drivers/burke/makefile
M 3rdparty/drivers/disto/makefile
M 3rdparty/drivers/emudsk/makefile
M 3rdparty/drivers/ide/makefile
M 3rdparty/drivers/makefile
M 3rdparty/drivers/mmc/makefile
M 3rdparty/drivers/s16550/makefile
M 3rdparty/drivers/sdisk/makefile
M 3rdparty/drivers/sdisk3/makefile
M 3rdparty/drivers/tccc/makefile
M 3rdparty/fmgrs/makefile
M 3rdparty/fmgrs/msf/makefile
M 3rdparty/makefile
M 3rdparty/p2mods/makefile
M 3rdparty/p2mods/noice/makefile
M 3rdparty/packages/arcadepak/makefile
M 3rdparty/packages/basic09/makefile
M 3rdparty/packages/cc/makefile
M 3rdparty/packages/coyota/makefile
M 3rdparty/packages/deskmate3/makefile
M 3rdparty/packages/ed/makefile
M 3rdparty/packages/fsim2/makefile
M 3rdparty/packages/koronis/makefile
M 3rdparty/packages/kyumgai/makefile
M 3rdparty/packages/makefile
M 3rdparty/packages/mm/makefile
M 3rdparty/packages/multivue/cmds_6309/makefile
M 3rdparty/packages/multivue/cmds_6809/makefile
M 3rdparty/packages/multivue/makefile
M 3rdparty/packages/os9l2bbs/6809l2/makefile
M 3rdparty/packages/os9l2bbs/makefile